# Copyright Institute of Sound and Vibration Research - All rights reserved

# Generic C++ classes to ease the implementation of Max/MSP external objects.
ADD_SUBDIRECTORY( libmaxsupport )

ADD_SUBDIRECTORY( convert_input )
ADD_SUBDIRECTORY( delay_vector )
ADD_SUBDIRECTORY( gain_matrix )
ADD_SUBDIRECTORY( delay_vector_visr )
ADD_SUBDIRECTORY( matrix_convolver )
