# Copyright Institute of Sound and Vibration Research - All rights reserved

# Simple external to test the functionality of the mex interface
# ADD_SUBDIRECTORY( biquad_iir_filter )
# ADD_SUBDIRECTORY( delay_vector )
ADD_SUBDIRECTORY( feedthrough )
# ADD_SUBDIRECTORY( gain_matrix )
# ADD_SUBDIRECTORY( late_reverb_filter_calculator )
# ADD_SUBDIRECTORY( multichannel_convolver )
ADD_SUBDIRECTORY( time_frequency_feedthrough )
